--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -1,6 +1,6 @@
-{% extends "layout.njk" %}
+{% extends "_layout.njk" %}
 
-{% set title = "Publish" %}
+{% set title = "Publish teacher training courses" %}
 
 {% block beforeContent %}
 
