Update phase banner

--- a/app/views/_layout-auth.njk
+++ b/app/views/_layout-auth.njk
@@ -45,16 +45,18 @@
     productName: serviceName,
     containerClasses: "govuk-width-container"
   }) }}
+
+  {{ govukPhaseBanner({
+    tag: {
+      text: environment if environment != 'production' else 'beta',
+      classes: "app-tag--prototype" if environment != 'production'
+    },
+    html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.',
+    classes: "govuk-width-container"
+  }) }}
 {% endblock %}
 
 {% block beforeContent %}
-  {{ govukPhaseBanner({
-    tag: {
-      text: environment if environment != 'production' else 'beta'
-    },
-    html: "This is a prototype of a new service. Some parts of this prototype do not work yet."
-  }) }}
-
   {% block pageNavigation %}
     {{ govukBackLink({
       text: backLinkText or "Back",
