--- a/app/views/auth/index.njk
+++ b/app/views/auth/index.njk
@@ -128,7 +128,7 @@
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="anne">
+          <input type="hidden" name="username" value="annecolin@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Anne"
@@ -149,7 +149,7 @@
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="susy">
+          <input type="hidden" name="username" value="susycolin@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Susy"
@@ -186,14 +186,14 @@
         </ul>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="mary">
+          <input type="hidden" name="username" value="marycolin@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Mary"
           }) }}
         </form>
 
-        <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
+        <!-- <hr class="govuk-section-break govuk-section-break--visible govuk-section-break--l">
 
         <h2 class="govuk-heading-m">Colin</h2>
 
@@ -207,12 +207,12 @@
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="colin">
+          <input type="hidden" name="username" value="colin@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Colin"
           }) }}
-        </form>
+        </form> -->
 
       {% endif %}
 
