Fix username error

--- a/app/views/auth/index.njk
+++ b/app/views/auth/index.njk
@@ -128,7 +128,7 @@
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="annecolin@example.com">
+          <input type="hidden" name="username" value="anne@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Anne"
@@ -149,7 +149,7 @@
         </p>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="susycolin@example.com">
+          <input type="hidden" name="username" value="susy@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Susy"
@@ -186,7 +186,7 @@
         </ul>
 
         <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
-          <input type="hidden" name="username" value="marycolin@example.com">
+          <input type="hidden" name="username" value="mary@example.com">
           <input type="hidden" name="password" value="bat">
           {{ govukButton({
             text: "Sign in as Mary"
