Update sign in form

--- a/app/views/auth/index.njk
+++ b/app/views/auth/index.njk
@@ -64,7 +64,8 @@
               errorMessage: "Enter a valid email address" if errors.error,
               value: data.username,
               classes: "govuk-!-width-two-thirds",
-              spellcheck: false
+              spellcheck: false,
+              autocomplete: "off"
             }) }}
 
             {{ govukInput({
@@ -79,7 +80,9 @@
               classes: "govuk-!-width-two-thirds",
               formGroup: {
                 classes: "govuk-!-margin-bottom-1"
-              }
+              },
+              spellcheck: false,
+              autocomplete: "off"
             }) }}
 
             <p class="govuk-body">
