--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -15,6 +15,10 @@
         {{ title }}
       </h1>
 
+      <p class="govuk-body">
+        <a class="govuk-link" href="/organisations/1A4/cycles/2022/courses/new/subject-level">New course</a>
+      </p>
+
     </div>
   </div>
 
