--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -1,11 +1,33 @@
 {% extends "_layout.njk" %}
 
-{% set title = ""  %}
+{% set title = "" %}
+{% set caption = "" %}
 
 {% block beforeContent %}
-
+{{ govukBackLink({
+  text: "Back",
+  href: actions.back
+}) }}
 {% endblock %}
 
 {% block content %}
+
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+
+      <h1 class="govuk-heading-l">
+        <span class="govuk-caption-l">
+          {{ caption }}
+        </span>
+        {{ title }}
+      </h1>
+
+      {{ govukButton({
+        text: "Add course",
+        href: actions.new
+      }) }}
+
+    </div>
+  </div>
 
 {% endblock %}
