--- a/app/views/_layout.njk
+++ b/app/views/_layout.njk
@@ -32,7 +32,7 @@
 {% from "govuk/components/warning-text/macro.njk"        import govukWarningText %}
 
 {% block head %}
-  {% include "includes/head.njk" %}
+  {% include "_includes/head.njk" %}
 {% endblock %}
 
 {% block pageTitle %}
@@ -101,7 +101,7 @@
   </div>
   {% block scripts %}
     {{ data | log }}
-    {% include "includes/scripts.njk" %}
+    {% include "_includes/scripts.njk" %}
     {% block pageScripts %}{% endblock %}
   {% endblock %}
   <!-- GOV.UK Prototype Kit {{ releaseVersion }} -->
