Update error summary include

--- a/app/views/auth/confirm-email.njk
+++ b/app/views/auth/confirm-email.njk
@@ -15,9 +15,9 @@
 
 {% block content %}
 
-  {% include "./_notification-banner.njk" %}
+  {% include "_includes/notification-banner.njk" %}
 
-  {% include "./_error-summary.njk" %}
+  {% include "_includes/error-summary.njk" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
