--- a/app/views/auth/create-password.njk
+++ b/app/views/auth/create-password.njk
@@ -15,7 +15,7 @@
 
 {% block content %}
 
-  {% include "./_error-summary.njk" %}
+  {% include "_includes/error-summary.njk" %}
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
