--- a/app/views/courses/subject.njk
+++ b/app/views/courses/subject.njk
@@ -12,6 +12,8 @@
 
 {% block content %}
 
+  {% include "_includes/error-summary.njk" %}
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
