--- a/app/views/courses/funding-type.njk
+++ b/app/views/courses/funding-type.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
-{% set title = "" %}
-{% set caption = "" %}
+{% set caption = "Add course" %}
+{% set title = "Is it fee paying or salaried?" %}
 
 {% block beforeContent %}
 {{ govukBackLink({
@@ -17,16 +17,28 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-l">
-        <span class="govuk-caption-l">
-          {{ caption }}
-        </span>
-        {{ title }}
-      </h1>
+      {% set headingHtml %}
+        <h1 class="govuk-heading-l">
+          <span class="govuk-caption-l">
+            {{ caption }}
+          </span>
+          {{ title }}
+        </h1>
+      {% endset %}
 
       <form action="{{ actions.save }}" method="post" accept-charset="utf-8" novalidate>
 
-
+        {{ govukRadios({
+          idPrefix: "funding-type",
+          name: "course[fundingType]",
+          fieldset: {
+            legend: {
+              html: headingHtml
+            }
+          },
+          errorMessage: errors | getErrorMessage("funding-type"),
+          items: fundingTypeOptions
+        }) }}
 
         {{ govukButton({
           text: "Continue"
