--- a/app/views/courses/visa-sponsorship.njk
+++ b/app/views/courses/visa-sponsorship.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
+{% set caption = "Add course" %}
 {% set title = "" %}
-{% set caption = "" %}
 
 {% block beforeContent %}
 {{ govukBackLink({
