--- a/app/views/courses/course-start-date.njk
+++ b/app/views/courses/course-start-date.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
-{% set title = "" %}
-{% set caption = "" %}
+{% set caption = "Add course" %}
+{% set title = "When does the course start?" %}
 
 {% block beforeContent %}
 {{ govukBackLink({
