--- a/app/views/courses/list.njk
+++ b/app/views/courses/list.njk
@@ -1,7 +1,7 @@
 {% extends "_layout.njk" %}
 
-{% set title = "" %}
-{% set caption = "" %}
+{% set title = "Courses" %}
+{% set caption = data.currentCycle.code | getCycleLabel %}
 
 {% block beforeContent %}
 {{ govukBackLink({
