--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -19,6 +19,10 @@
         <a class="govuk-link" href="/organisations/1ZN/cycles/2022/courses/new/subject-level">New course</a>
       </p>
 
+      <p class="govuk-body">
+        <a class="govuk-link" href="/organisations">Organisations</a>
+      </p>
+
     </div>
   </div>
 
